major revision of libPRADA

--- a/share/test/relational_plan/config
+++ b/share/test/relational_plan/config
@@ -2,13 +2,13 @@
 
 randSeed 1234
 
-file_language language.dat
+file_symbols symbols.dat
 file_rules rules.dat
 file_state state.dat
 file_reward reward.dat
 
-// 1 SST,  2 UCT,  3 PRADA,  4 A_PRADA
-plan_type 3
+// 1 PRADA,  2 A_PRADA  3 UCT,  4 SST
+plan_type 4
 
 
 [SHARED PARAMETERS]
@@ -19,21 +19,22 @@ discountFactor 0.95
 noise_scaling_factor 0.75
 
 
-[SST]
-
-SST_horizon 3
-SST_branch 4
-
-
 [PRADA]
 
-PRADA_horizon 3
-PRADA_num_samples 500
+PRADA_horizon 4
+PRADA_num_samples 2000
 PRADA_noise_softener 0.2
+
 
 [UCT]
 
-UCT_horizon 3
-UCT_c 10.0
-UCT_numEpisodes 500
+UCT_horizon 4
+UCT_c 1.0
+UCT_numEpisodes 2000
+
+
+[SST]
+
+SST_horizon 2
+SST_branch 3
 
