minor fix: cleaned up dependencies of relational on MT

--- a/slices/libPRADA/Makefile
+++ b/slices/libPRADA/Makefile
@@ -19,7 +19,7 @@ cleanTests::
 	-@find -L test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} clean \;
 
 doc::
-	make -C doc doxy_array
+	make -C doc
 
 zip::
 	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude-vcs --exclude-from tar.exclude --exclude-from $(NAME)/tar.exclude
