--- a/usr/MT/gvc/Makefile
+++ b/usr/MT/gvc/Makefile
@@ -2,10 +2,15 @@ BASE = ../../../share
 
 GTK = 1
 
-OBJS = main.o callbacks.o
+OBJS = main.o graphvizGtk.o
 
 #OBJS = gvplugin_gtk.o
 #OUTPUT = libgvplugin_gtk.so
+
+CPATH	:= $(HOME)/tmp/gvd/include:$(CPATH)
+LPATH	:= $(HOME)/tmp/gvd/lib:$(LPATH)
+
+CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
 LIBS += -lgraph -lgvc
 
