changed Makefile to make GTK stuff work in pick and place demo

--- a/share/demo/pickAndPlace/Makefile
+++ b/share/demo/pickAndPlace/Makefile
@@ -5,6 +5,8 @@ OBJS = main.o behaviors.o
 #LIBS += -lhardware -lmotion -lperception
 
 OPENCV = 1
+GTK = 1
+GTKL = 1
 MAKEMODE = app
 
 include $(BASE)/make-generic
