use particle filter as process

--- a/share/test/particle_filter/Makefile
+++ b/share/test/particle_filter/Makefile
@@ -2,7 +2,7 @@ BASE = ../..
 
 buildAndLink_MTLIB = 1
 
-LIBS += -ljk -lrelational
+LIBS += -ljk -lrelational -lbiros
 
 
 include $(BASE)/make-generic
