cleaned motion stuff - demo works again

--- a/share/test/motion_graspAction/MT.cfg
+++ b/share/test/motion_graspAction/MT.cfg
@@ -23,15 +23,15 @@ aico_display = 10
 aico_damping = 1e-1
 aico_advanceBeliefBeyondXhat = 1
 
-ActionToMotionPrimitive_verbose = 0
-ActionToMotionPrimitive_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
-ActionToMotionPrimitive_TrajectoryLength  = 64 32
-ActionToMotionPrimitive_TrajectoryDuration = 4.
+MotionPlanner_verbose = 0
+MotionPlanner_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+MotionPlanner_TrajectoryLength  = 64 32
+MotionPlanner_TrajectoryDuration = 4.
 
-Controller_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
-Controller_tau = 0.01
-Controller_maxJointStep = 0.01
-Controller_listens = 0
-Controller_followTrajectoryTimeScale = 2
+MotionController_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+MotionController_tau = 0.01
+MotionController_maxJointStep = 0.01
+MotionController_listens = 0
+MotionController_followTrajectoryTimeScale = 2
 
 TV_limits = [-2. 2.; -2. 2.; -2. 0.2; -2. 2.; -2. 0.2; -3. 3.; -2. 2.; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5 ]
