--- a/share/test/motion_joystick/MT.cfg
+++ b/share/test/motion_joystick/MT.cfg
@@ -4,11 +4,11 @@ openSkin = 0
 
 ors_file = ../../configurations/schunk.ors
 
-Controller_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
-Controller_tau = 0.01
-Controller_maxJointStep = 0.01
-Controller_followTrajectoryTimeScale = .5
-Controller_listens = 0
+MotionController_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+MotionController_tau = 0.01
+MotionController_maxJointStep = 0.01
+MotionController_followTrajectoryTimeScale = .5
+MotionController_listens = 0
 
 Hrate = 1e0
 Wrate = 1e1
