--- a/slices/libPRADA/src/relational/Makefile
+++ b/slices/libPRADA/src/relational/Makefile
@@ -2,10 +2,14 @@ BASE   = ../..
 NAME   = $(shell basename $(BASE))
 OUTPUT = $(BASE)/lib/$(NAME).so
 CXXFLAGS += -fPIC
-LIBS   += -lrt
 
-#OPTIM  = fast_debug
-OPTIM  = debug
+SYS = $(shell uname)
+ifneq ($(SYS), Darwin)
+LIBS   += -lrt
+endif
+
+OPTIM  = fast_debug
+#OPTIM  = debug
 
 LAPACK = 0
 
