--- a/slices/libRoboticsCourse/Makefile
+++ b/slices/libRoboticsCourse/Makefile
@@ -1,27 +1,12 @@
-NAME   = $(shell basename $(PWD))
+BASE   = $(shell realpath .)
+NAME   = $(shell basename $(BASE))
 
 ALL =	extern/SWIFT++_1.2/src \
 	src/MT
 #	extern/SWIFT++_1.2/decomposer/src \
 
-makeAll: $(ALL:%=make/%) makePaths/test makePaths/course
+makeAll: $(ALL:%=makePath/%) makeSubpaths/test makeSubpaths/course
 
-cleanAll: $(ALL:%=clean/%) cleanPaths/test cleanPaths/course
+cleanAll: $(ALL:%=cleanPath/%) cleanSubpaths/test cleanSubpaths/course
 
-make/%::
-	make -C $*
-
-clean/%::
-	make clean -C $*
-
-makePaths/%::
-	-@find -L $* -maxdepth 1 -follow -type d -not -name '$*' -not -name 'SHARE' -exec make -C {} \;
-
-cleanPaths/%::
-	-@find -L $* -maxdepth 1 -follow -type d -not -name '$*' -not -name 'SHARE' -exec make -C {} clean \;
-
-doc::
-	make -C doc doxy_array
-
-zip::
-	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude-vcs --exclude-from tar.exclude
+include make-generic
