--- a/slices/libRoboticsCourse/src/MT/Makefile
+++ b/slices/libRoboticsCourse/src/MT/Makefile
@@ -1,10 +1,1 @@
-BASE   = $(shell realpath ../..)
-NAME   = $(shell basename $(BASE))
-OUTPUT = $(BASE)/lib/$(NAME).so
-
-CONFIGMODE = mlrlib
-
-OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
-OBJS := $(OBJS:%.cpp=%.o)
-
-include $(BASE)/make-generic
+SHARE/Makefile_for_slices
