add schunk ors and use it for simulator

--- a/projects/symbol-grounding/Makefile
+++ b/projects/symbol-grounding/Makefile
@@ -8,6 +8,8 @@ buildAndLink_RELATIONAL = 1
 buildAndLink_JOHANNES = 1
 buildAndLink_MTLIB = 1
 
+LIBS += -lbiros -ljk
+
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
 
