joystick demo nice again ;-)

--- a/share/test/motion_joystick/ino.cfg
+++ b/share/test/motion_joystick/ino.cfg
@@ -1,2 +1,3 @@
 0 PoseView field HardwareReference q_reference
-1 GenericVariableView variable JoystickState
+1 GenericFieldInfoView field SkinPressure y_real
+2 PoseView field HardwareReference q_real
