--- a/share/test/motion_joystick/MT.cfg
+++ b/share/test/motion_joystick/MT.cfg
@@ -8,11 +8,17 @@ MotionController_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 MotionController_tau = 0.01
 MotionController_maxJointStep = 0.01
 MotionController_followTrajectoryTimeScale = .5
-MotionController_listens = 0
 
 Hrate = 1e0
 Wrate = 1e1
 
 TV_limits = [-2. 2.; -2. 2.; -2. 0.2; -2. 2.; -2. 0.2; -3. 3.; -2. 2.; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5 ]
 
-JoystickRate = .1
+JoystickRate = .2
+
+        TV_eff_vprec =     10 [d] (default!)
+          TV_q_vprec =     1 [d] (default!)
+        TV_rot_vprec =   10 [d] (default!)
+        TV_col_yprec =     1 [d] (default!)
+        TV_lim_yprec =  1000 [d] (default!)
+       TV_skin_yprec =  1e4 [d] (default!)
