--- a/projects/active-learning/MT.cfg
+++ b/projects/active-learning/MT.cfg
@@ -12,7 +12,7 @@ TV_lim_yprec = 1e3
 TV_q_vprec  = 1e-1
 
 
-orsFile = schunk-armani.ors
+orsFile = schunk-armani-tray.ors
 
 ## solver options
 aico_sweepMode = 3
