--- a/share/src/perception/Makefile
+++ b/share/src/perception/Makefile
@@ -8,10 +8,12 @@ MAKEMODE = mlrlib
 #if in doubt, you actually want to change make-config!
 #otherwise ask Marc
 
-buildAndLink_MT = 1
+buildAndLink_MTLIB = 1
 buildAndLink_NIKOLAY = 1
 buildAndLink_DMITRY = 1
 buildAndLink_STANIMIR = 1
+
+LIBS += -lbiros
 
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
