--- a/share/test/motion_joystick/Makefile
+++ b/share/test/motion_joystick/Makefile
@@ -1,6 +1,6 @@
 BASE = ../..
 
-LIBS += -lmotion -lhardware -lperception
+LIBS += -lmotion -lhardware -lperception -lbiros
 
 include $(BASE)/make-generic
 
