--- a/share/test/particle_filter/Makefile
+++ b/share/test/particle_filter/Makefile
@@ -3,6 +3,8 @@ BASE = ../..
 buildAndLink_MTLIB = 1
 
 LIBS += -ljk -lrelational -lbiros
+CXXFLAGS := -pg
+LDFLAGS := -pg
 
 
 include $(BASE)/make-generic
