use ors as major window

--- a/share/test/perception_pointcloud/Makefile
+++ b/share/test/perception_pointcloud/Makefile
@@ -3,12 +3,13 @@ OBJS = main.o
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
-###buildAndLink_MTLIB = 1
+buildAndLink_MTLIB = 1
 ###OPENCV = 1
 
 PCL=1
+OPENCV= 1
 
-LIBS += -lbiros -lhardware -lperception -ljk -lrelational -lmotion
+LIBS += -lstdc++ -lbiros -lhardware -lperception -ljk -lrelational -lmotion -lm
 
 buildAndLink_MTLIB = 1
 
