follow marker instead of user based points

--- a/projects/12-kinectLocalization/MT.cfg
+++ b/projects/12-kinectLocalization/MT.cfg
@@ -17,3 +17,6 @@ Wrate = 1e1
 TV_limits = [-2. 2.; -2. 2.; -2. 0.2; -2. 2.; -2. 0.2; -3. 3.; -2. 2.; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5 ]
 
 JoystickRate = .1
+
+markerColor = [180. 100. 100.]
+colorThreshold = 30
