resolve merge conflicts

--- a/share/test/perception_pointcloud/Makefile
+++ b/share/test/perception_pointcloud/Makefile
@@ -1,16 +1,10 @@
 BASE = ../..
-OBJS = main.o
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
-
-buildAndLink_MTLIB = 1
-###OPENCV = 1
+MAKEMODE=app
 
 PCL=1
-OPENCV= 1
 
-LIBS += -lstdc++ -lbiros -lhardware -lperception -ljk -lrelational -lmotion -lm
 
-buildAndLink_MTLIB = 1
 
 include $(BASE)/make-generic
