--- a/share/demo/pickAndPlace/Makefile
+++ b/share/demo/pickAndPlace/Makefile
@@ -2,7 +2,7 @@ BASE = ../..
 
 OBJS = main.o behaviors.o
 
-#LIBS += -lhardware -lmotion -lperception
+LIBS += -lhardware -lmotion -lperception -lbiros
 
 OPENCV = 1
 GTK = 1
