track ball instead of color marker

--- a/projects/12-kinectLocalization/Makefile
+++ b/projects/12-kinectLocalization/Makefile
@@ -3,6 +3,6 @@ BASE = ../../share
 PCL = 1
 
 buildAndLink_HARDWARE = 1
-LIBS += -lmotion -lhardware -lperception -lbiros -lvtkCommon -lvtkFiltering -lvtkRendering -lstdc++ -lm
+LIBS += -lmotion -lhardware -lperception -lbiros -lvtkCommon -lvtkFiltering -lvtkRendering -lstdc++ -lm -lvtkGraphics
 
 include $(BASE)/make-generic
