--- a/projects/12-kinectLocalization/MT.cfg
+++ b/projects/12-kinectLocalization/MT.cfg
@@ -2,21 +2,26 @@ openArm = 0
 openHand = 0
 openSkin = 0
 sendSchunkArmMotion = 1
+objectDistance = 0.5
 
 ors_file = schunk.ors
 
-Controller_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
-Controller_tau = 0.01
-Controller_maxJointStep = 0.01
-Controller_followTrajectoryTimeScale = .5
-Controller_listens = 0
+kinect_trans_mat = [ -0.979186 0.0550874 -0.0542615 0.313475; 0.0718209 0.474873 -0.921533 0.00174595; 0.00517227 -0.818866 -0.490218 1.17404; 1.35447e-14 -1.00753e-13 -4.18554e-14 1 ]
+
+MotionController_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+MotionController_tau = 0.01
+MotionController_maxJointStep = 0.01
+MotionController_followTrajectoryTimeScale = .5
 
 Hrate = 1e0
 Wrate = 1e1
 
 TV_limits = [-2. 2.; -2. 2.; -2. 0.2; -2. 2.; -2. 0.2; -3. 3.; -2. 2.; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5 ]
 
-JoystickRate = .1
+JoystickRate = .2
 
-markerColor = [180. 100. 100.]
-colorThreshold = 30
+markerColor = [0.0 0.8 1]
+colorThreshold = 0.2
+minCloudSize = 40
+MinSphereRadius = 0.01
+MaxSphereRadius = 0.03
