use kinect instead of camera

--- a/share/demo/pickAndPlace/MT.cfg
+++ b/share/demo/pickAndPlace/MT.cfg
@@ -2,33 +2,10 @@ openArm = 0
 openHand = 0
 openSkin = 0
 
-###
+### perception parameters
 
-percObjectType = [7 ];##ordered types of objects
-hsvMean = [10 210 170]
-hsvDeviation = [10 40 100]
-
-shapeFitter_display = 0
-
-esaveImage = 1;
-
-evisHsvTargets = [20 220 190 10 40 100] #orange
-
-openBumble = 1
-openEarlyVision = 1
-evisDisplay = 0
-evisThetaSmoothing = 7
-
-percObjectType = [1 1 1 2 2 0];#1ordered types of objects
-
-evisHsvTargets = [80 220 150 20 80 100] # gruene baeren
-evisHsvTargets = [120 120 200 10 40 100] #blaue dose
-evisHsvTargets = [20 220 190 10 40 100] #orange
-evisHsvTargets = [255 150 140 10 40 100] #pink
-evisHsvTargets = [40 150 220 10 40 100] #yellow
-evisHsvTargets = [0 250 160 10 40 100] #dark red
-percObjectType = [2];
-
+objectDistance=0.05
+kinect_trans_mat = [ -0.979186 0.0550874 -0.0542615 0.313475; 0.0718209 0.474873 -0.921533 0.00174595; 0.00517227 -0.818866 -0.490218 1.17404; 1.35447e-14 -1.00753e-13 -4.18554e-14 1 ]
 
 ### motion parameters
 
@@ -68,7 +45,7 @@ aico_display = 0
 aico_damping = 1e-1
 aico_advanceBeliefBeyondXhat = 1
 
-MotionPlanner_verbose = 0
+MotionPlanner_verbose = 1
 MotionPlanner_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 MotionPlanner_TrajectoryLength  = 64 32
 MotionPlanner_TrajectoryDuration = 4.
@@ -80,3 +57,4 @@ MotionController_listens = 0
 MotionController_followTrajectoryTimeScale = 5.5
 
 TV_limits = [-2. 2.; -2. 2.; -2. 0.2; -2. 2.; -2. 0.2; -3. 3.; -2. 2.; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5 ]
+
