--- a/share/src/JK/Makefile
+++ b/share/src/JK/Makefile
@@ -1,8 +1,10 @@
 BASE   = ../..
-NAME   = libjk
+NAME   = libJK
 OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
+
+LIBS += -lrelational
 
 OBJS  = $(shell find . -maxdepth 2 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
