--- a/share/demo/pickAndPlace/MT.cfg
+++ b/share/demo/pickAndPlace/MT.cfg
@@ -53,8 +53,8 @@ MotionPlanner_TrajectoryDuration = 4.
 MotionController_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 MotionController_tau = 0.01
 MotionController_maxJointStep = 0.01
-MotionController_listens = 0
-MotionController_followTrajectoryTimeScale = 5.5
+Motion Controller_listens = 0
+MotionController_followTrajectoryTimeScale = 1
 
 TV_limits = [-2. 2.; -2. 2.; -2. 0.2; -2. 2.; -2. 0.2; -3. 3.; -2. 2.; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5 ]
 
