--- a/share/test/motion_joystick/MT.cfg
+++ b/share/test/motion_joystick/MT.cfg
@@ -19,6 +19,6 @@ JoystickRate = .2
         TV_eff_vprec =   10 [d] (default!)
           TV_q_vprec =    1 [d] (default!)
         TV_rot_vprec =   10 [d] (default!)
-        TV_col_yprec =  1e3 [d] (default!)
+        TV_col_yprec =    0 1e3 [d] (default!)
         TV_lim_yprec =  1e5 [d] (default!)
        TV_skin_yprec =  1e4 [d] (default!)
