--- a/share/src/JK/Makefile
+++ b/share/src/JK/Makefile
@@ -4,6 +4,8 @@ OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
 
+LIBS += -lrelational
+
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
 OBJS  = $(shell find . -maxdepth 2 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
