--- a/share/src/relational/Makefile
+++ b/share/src/relational/Makefile
@@ -4,10 +4,10 @@ OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
 
-BUILDS += buildComponent/NJ buildComponent/DZ buildComponent/SD buildComponent/biros
+BUILDS += buildComponent/MT
 LIBS += -lMT
 
-OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS := $(OBJS:%.cpp=%.o)
 
 include $(BASE)/make-generic
