--- a/share/extern/Lewiner/Makefile
+++ b/share/extern/Lewiner/Makefile
@@ -8,9 +8,7 @@ MAKEMODE = externlib
 CXXFLAGS += -fPIC
 
 #CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
-OBJS  = $(shell find . \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+OBJS  = $(shell find . -maxdepth 1 -name '*.c*')
 OBJS := $(OBJS:%.cpp=%.o)
-OBJS_C  = $(shell find . -name '*.c')
-OBJS += $(OBJS_C:%.c=%.o)
 
 include $(BASE)/make-generic
