--- a/projects/active-learning/visualize_gp/Makefile
+++ b/projects/active-learning/visualize_gp/Makefile
@@ -2,8 +2,9 @@
 # Johannes, 09 Dec 2011
 #
 
-BASE = ../../share
+BASE = ../../../share
 
+LIBS += -lrelational -lMT -lbiros -ljk -lstdc++
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 CUDA = 0
 OBJS  = main.o 
