test/views/main-wish as the wishlist of how views should work

--- a/share/test/views/Makefile
+++ b/share/test/views/Makefile
@@ -1,7 +1,11 @@
 BASE = ../..
 
+OBJS = main-wish.o
+
 OPENCV = 0 1
 GTK = 1
 GTKGL = 1
+
+CXXFLAGS += -D MT_IMPLEMENT_TEMPLATES
 
 include $(BASE)/make-generic
