--- a/share/test/perception_pointcloud/MT.cfg
+++ b/share/test/perception_pointcloud/MT.cfg
@@ -1,7 +1,4 @@
 objectDistance=0.05
-ors_file= empty.ors
-#../../configurations/schunk.ors
+ors_file=schunk.ors
 
-kinect_trans_mat = [ 1 0 0 0; 0 1 0 0; 0 0 1 0; 0 0 0 1]
-#kinect_trans_mat = [ -1.13818 0.33287 -0.16740 0.; 0.12634 0.44114 -1.24029 0.; 0.04101 -1.11995 -0.71850 0.; 0.00000 0.00000 0.00000 1.00000]
-
+kinect_trans_mat = [ -0.979186 0.0550874 -0.0542615 0.313475; 0.0718209 0.474873 -0.921533 0.00174595; 0.00517227 -0.818866 -0.490218     1.17404; 1.35447e-14 -1.00753e-13 -4.18554e-14 1 ]
