compiler warnings fixed

--- a/share/src/views/Makefile
+++ b/share/src/views/Makefile
@@ -4,7 +4,7 @@ OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
 
-%BUILDS += buildComponent/biros
+BUILDS += buildComponent/biros
 LIBS += -lbiros
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
