--- a/share/src/views/Makefile
+++ b/share/src/views/Makefile
@@ -4,8 +4,8 @@ OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
 
-BUILDS += buildComponent/biros
-LIBS += -lbiros
+#BUILDS += buildComponent/biros
+#LIBS += -lbiros
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS := $(OBJS:%.cpp=%.o)
