motion tests work again

--- a/share/test/motion_feedbackControl/Makefile
+++ b/share/test/motion_feedbackControl/Makefile
@@ -2,4 +2,7 @@ BASE = ../..
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
+BUILDS += buildComponent/motion
+LIBS += -lmotion
+
 include $(BASE)/make-generic
