--- a/share/test/biros-vision/ino.cfg
+++ b/share/test/biros-vision/ino.cfg
@@ -1,4 +1,1 @@
-0 ImageView field camera rgb
-1 ImageView field gray gray
-2 ImageView field SURF_features display
-3 ImageView field hough_lines display
+0 ImageView2
