--- a/share/extern/Lewiner/Makefile
+++ b/share/extern/Lewiner/Makefile
@@ -7,11 +7,6 @@ MAKEMODE = externlib
 
 CXXFLAGS += -fPIC
 
-LEWINER=0
-PCL=0
-
-#CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
-OBJS  = $(shell find . -maxdepth 1 -name '*.c*')
-OBJS := $(OBJS:%.cpp=%.o)
+OBJS  = ply.o MarchingCubes.o 
 
 include $(BASE)/make-generic
