--- a/slices/libAICO/Makefile
+++ b/slices/libAICO/Makefile
@@ -1,31 +1,12 @@
-NAME   = $(shell basename $(PWD))
+BASE   = $(shell realpath .)
+NAME   = $(shell basename $(BASE))
 
 ALL =	extern/SWIFT++_1.2/src \
 	src/MT
 #	extern/SWIFT++_1.2/decomposer/src \
 
-makeAll: $(ALL:%=make/%)
+makeAll: $(ALL:%=makePath/%) makeSubpaths/test 
 
-cleanAll: $(ALL:%=clean/%) cleanProjects
+cleanAll: $(ALL:%=cleanPath/%) cleanSubpaths/test 
 
-make/%::
-	make -C $*
-
-clean/%::
-	make clean -C $*
-
-tests::
-	-@find test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} \;
-
-projects::
-	-@find proj_* -maxdepth 1 -follow -type d -not -name 'proj_*' -not -name 'SHARE' -exec make -C {} \;
-
-cleanProjects::
-	-@find test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} clean \;
-	-@find proj_* -maxdepth 1 -follow -type d -not -name 'robot' -not -name 'SHARE' -exec make -C {} clean \;
-
-doc::
-	make -C doc guide doxy
-
-zip::
-	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude "SHARE" --exclude "*.svn" --exclude ".git" --exclude "*solution*" --exclude "*ODE_0.11/ode-0.11" --exclude "*ODE_0.11/include" --exclude "*ODE_0.11/lib" --exclude "*/IBDS*" --exclude "*ors_mesh*"
+include make-generic
