some more mlrlib_minimal compile fixed -- almost works without _IMPLEMENT_TEMPLATES

--- a/share/src/JK/Makefile
+++ b/share/src/JK/Makefile
@@ -4,7 +4,7 @@ OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
 
-CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
+#CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
 OBJS  = $(shell find . -maxdepth 2 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
