mapGraph works on ors; extern libs compile to share/lib

--- a/share/extern/SWIFT++_1.2/decomposer/src/Makefile
+++ b/share/extern/SWIFT++_1.2/decomposer/src/Makefile
@@ -1,11 +1,11 @@
 .PRECIOUS: %.o
 
 
-OUTPUT    = ../../bin/decomposer.exe ../../lib/libSWIFTdecomp.a
+OUTPUT    = ../../bin/decomposer.exe ../../../../lib/libSWIFTdecomp.a
 CXXFLAGS += -DSWIFT_DECOMP -DDECOMP_GRAPHICS -O3 -fPIC -Wno-deprecated -Wno-write-strings -IRAPID -I../include -I../../include -I/usr/include/tcl8.5
 OBJS      = $(shell find . \( -name '*.cpp' \) )
 OBJS     := $(OBJS:%.cpp=%.o)
-LIBS	= -L../../lib -lSWIFT++ -lqhull -lm -ltcl -ltk -lglut -lGLU -lXmu
+LIBS	= -L../../../../lib -lSWIFT++ -lqhull -lm -ltcl -ltk -lglut -lGLU -lXmu
 
 default: $(OUTPUT)
 
