--- a/share/extern/SWIFT++_1.2/decomposer/src/RAPID/Makefile
+++ b/share/extern/SWIFT++_1.2/decomposer/src/RAPID/Makefile
@@ -1,4 +1,4 @@
-OUTPUT    = libRAPID.a
+OUTPUT    = ../../../../../lib/libRAPID.a
 CXXFLAGS += -O3 -fPIC -Wno-deprecated
 OBJS      = $(shell find . \( -name '*.cpp' \) )
 OBJS     := $(OBJS:%.cpp=%.o)
