--- a/share/extern/SWIFT++_1.2/src/Makefile
+++ b/share/extern/SWIFT++_1.2/src/Makefile
@@ -1,4 +1,4 @@
-OUTPUT    = ../lib/libSWIFT++.a
+OUTPUT    = ../../../lib/libSWIFT++.a
 CXXFLAGS += -O3 -fPIC -I../include -DNO_CYCLE_DETECTION -DSWIFT_DECOMP #-Wall -Wno-deprecated
 OBJS      = $(shell find . \( -name '*.cpp' \) )
 OBJS     := $(OBJS:%.cpp=%.o)
