--- a/share/extern/libcolorseg/src/Makefile
+++ b/share/extern/libcolorseg/src/Makefile
@@ -1,4 +1,4 @@
-OUTPUT    = ../lib/libcolorseg.a
+OUTPUT    = ../../../lib/libcolorseg.a
 CXXFLAGS += -O3 -fPIC -I../include -Wno-deprecated
 OBJS      = $(shell find . \( -name '*.cpp' \) )
 OBJS     := $(OBJS:%.cpp=%.o)
