--- a/share/extern/Lewiner/Makefile
+++ b/share/extern/Lewiner/Makefile
@@ -1,12 +1,12 @@
-OUTPUT    = liblewiner.a
-CFLAGS += -O3 -fPIC
-OBJS = ply.o MarchingCubes.o 
+OUTPUT    = ../../lib/liblewiner.a
+CXXFLAGS += -O3 -fPIC -I../ply
+OBJS = MarchingCubes.o 
 
 
 $(OUTPUT): $(OBJS)
 	ar ruvs $(OUTPUT) $(OBJS)
 
-clean::
+clean:
 	rm -f *.o $(OUTPUT)
 
 depend:
