More versatile make for test/
Now we can only compile the code. Great, isn't it?!  This is necessary because
some tests need user interaction and Jenkins is to lazy to do that.

--- a/share/test/Makefile
+++ b/share/test/Makefile
@@ -1,16 +1,29 @@
 BASE = $(shell pwd)/..
 
-test::
-	@find . -maxdepth 1 -mindepth 1 -type d -not -name '.svn' -exec make {}/x.exe \;
+compile:
+	@for a in $$(ls); do \
+		if [ -d $$a ]; then \
+			echo ----------------------------------------; \
+			echo "        $$a"; \
+			echo ----------------------------------------; \
+			$(MAKE) -C $$a; \
+			echo; echo; \
+		fi; \
+	done;
 
-%/x.exe::
-	@echo; echo; echo ----------------------------------------
-	@echo "     " $*;
-	@echo ----------------------------------------
-	@echo; echo ----- compiling
-	-make -w -C $*
-	@echo; echo ----- testing
-	-cd $*; ./x.exe;
+test:
+	@for a in $$(ls); do \
+		if [ -d $$a ]; then \
+			echo ----------------------------------------; \
+			echo "        $$a"; \
+			echo ----------------------------------------; \
+			echo " compile ------------------------------"; \
+			$(MAKE) -C $$a; \
+			echo " test ---------------------------------"; \
+			$$a/x.exe; \
+			echo; echo; \
+		fi; \
+	done;
 
 clean::
 	@find . -maxdepth 1 -mindepth 1 -type d -not -name '.svn' -exec make -w -C {} clean \;
