--- a/share/test/module/Makefile
+++ b/share/test/module/Makefile
@@ -1,5 +1,9 @@
 BASE = ../../../share
 
+OBJS = main.o
+
+LIBS += -ldummy -lperception
+
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
 include $(BASE)/make-generic
