compile fixes for libmlr_minimal

--- a/share/Makefile
+++ b/share/Makefile
@@ -40,27 +40,27 @@ reformatSources:
 	cd src; find MT/ \( -name "*.h" -or -name "*.cpp" -or -name "*.cxx" \) -exec ./style.sed.sh {} \;
 
 make/%::
-	$(MAKE) -C $*
+	$(MAKE) -w -C $*
 
 depend/%::
-	$(MAKE) -C $* depend
+	$(MAKE) -w -C $* depend
 
 clean/%::
 	-rm -f $*/Makefile.dep
-	$(MAKE) clean -C $*
+	$(MAKE) clean -w -C $*
 
 tests::
-	-@find test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec $(MAKE) -C {} \;
+	-@find test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec $(MAKE) -w -C {} \;
 
 demo::
-	-@find demo -maxdepth 1 -follow -type d -not -name 'demo' -not -name 'SHARE' -exec $(MAKE) -C {} \;
+	-@find demo -maxdepth 1 -follow -type d -not -name 'demo' -not -name 'SHARE' -exec $(MAKE) -w -C {} \;
 
 cleanProjects::
 	-@find test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec $(MAKE) -C {} clean \;
 	-@find demo -maxdepth 1 -follow -type d -not -name 'demo' -not -name 'SHARE' -exec $(MAKE) -C {} clean \;
 
 doc::
-	$(MAKE) -C doc guide doxy
+	$(MAKE) -w -C doc guide doxy
 
 zip::
 	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude "SHARE" --exclude ".git" --exclude "*.kdev4" --exclude "xx-*" --exclude "MT.log" --exclude "*solution*" --exclude "course/*/main.cpp"  --exclude "pics" --exclude "*ODE_0.11/ode-0.11" --exclude "*ODE_0.11/include" --exclude "*ODE_0.11/lib" --exclude "*/IBDS*" --exclude "*ors_mesh*"
