--- a/share/test/mdp_pomdp/MT.cfg
+++ b/share/test/mdp_pomdp/MT.cfg
@@ -1,4 +1,4 @@
-mode = 4 9
+mode = 9
 
 problemFile = pomdp/hierarchicalHandwashing2.ddgm.tabular
 problemFile = pomdp/hierarchicalHandwashing2.mdp_fg
