check for PCL in kinect test

--- a/share/test/hardware_kinect/Makefile
+++ b/share/test/hardware_kinect/Makefile
@@ -1,8 +1,7 @@
 BASE = ../..
 
-PCL = 1
-
 buildAndLink_HARDWARE = 1
-LIBS += -lhardware -lperception -lbiros -lvtkCommon -lvtkFiltering -lvtkRendering
+buildAndLink_PCL = 1
+LIBS += -lhardware -lperception -lbiros -lvtkCommon -lvtkFiltering -lvtkRendering -ldevTools
 
 include $(BASE)/make-generic
