warn if MLR_PATH not set

--- a/share/projects/the_curious_robot/CMakeLists.txt
+++ b/share/projects/the_curious_robot/CMakeLists.txt
@@ -29,7 +29,9 @@ if (DEFINED ENV{MLR_PATH})
   set(MLR_PATH $ENV{MLR_PATH})
 else()
   set(MLR_PATH ~/mlr/git)
+  message("WARNING: $MLR_PATH is not set. I assume ~/git/mlr to be your path.")
 endif()
+
 # we need this in order to compile. MLR complains otherwise. No idea why.
 add_definitions(-DMT_IMPLEMENT_TEMPLATES)
 
