use swig2 instead of swig1 if both are installed

--- a/share/src/MT/Makefile_ors_for_swig
+++ b/share/src/MT/Makefile_ors_for_swig
@@ -14,7 +14,7 @@
 main: python
 
 python:
-	swig -c++ -python ors.i
+	swig2.0 -c++ -python ors.i
 	g++ -c -fPIC -shared ors_wrap.cxx -I../ -I/usr/include/python2.7/
 	g++ -shared array.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath ../../lib -lMT -o ../../lib/_orspy.so
 	mv orspy.py ../../lib/
