use $MLR_PATH for runpath
This way we can use a runpath for

--- a/share/src/MT/Makefile_ors_for_swig
+++ b/share/src/MT/Makefile_ors_for_swig
@@ -10,13 +10,16 @@
 #
 # Also take a look at share/test/orspy/
 
+ifndef MLR_PATH
+	MLR_PATH=/home/git/mlr
+endif
 
 main: python
 
 python:
 	swig2.0 -c++ -python ors.i
 	g++ -c -fPIC -shared ors_wrap.cxx -I../ -I/usr/include/python2.7/
-	g++ -shared array.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath ../../lib -lMT -o ../../lib/_orspy.so
+	g++ -shared array.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lMT -o ../../lib/_orspy.so
 	mv orspy.py ../../lib/
 
 clean:
