--- a/share/src/MT/Makefile_ors_for_swig
+++ b/share/src/MT/Makefile_ors_for_swig
@@ -20,7 +20,7 @@ python:
 	swig2.0 -c++ -python ors.i
 	g++ -c -fPIC -shared ors_wrap.cxx -I../ -I/usr/include/python2.7/
 	g++ -shared array.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lMT -o ../../lib/_orspy.so
-	install -D orspy.py ~/.local/lib/python2.7/site-packages/orspy/orspy.py
+	install -D orspy.py ~/.local/lib/python2.7/site-packages/orspy.py
 	rm orspy.py
 
 clean:
